# gRPC_calculator

./: Makefile  README.md  docker-compose.yml  pyproject.toml
add/: Dockerfile  pyproject.toml
add/proto/: add.proto
add/src/: main.py
add/src/api/routers/: calculator_route.py
add/src/app/: main.py
add/src/pb/: add_pb2.py  add_pb2_grpc.py
add/src/services/: add_service.py
calculator/: Dockerfile  pyproject.toml
calculator/src/api/routers/: calculator_route.py
calculator/src/app/: main.py
calculator/src/calculator/: main.py
calculator/src/calculator/api/routers/: calculator_route.py
calculator/src/calculator/pb/: time_series_pb2.py  time_series_pb2_grpc.py
calculator/src/pb/: add_pb2_grpc.py
calculator/src/validations/: requests.py
grpc_api/: Dockerfile  Makefile  pyproject.toml
grpc_api/proto/: fake.proto  time_series.proto
grpc_api/src/grpc_api/: main.py
grpc_api/src/grpc_api/pb/: fake_pb2.py  fake_pb2.pyi  fake_pb2_grpc.py  time_series_pb2.py  time_series_pb2.pyi  time_series_pb2_grpc.py
rest_api/: Dockerfile
rest_api/src/rest_api/: main.py
time_series/: Dockerfile  pyproject.toml
