[project]
name = "grpc-calculator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "grpc-interceptor>=0.15.4",
    "grpcio>=1.66.1",
    "grpcio-tools>=1.66.1",
    "fastapi[standard]>=0.115.0",
    "orjson>=3.10.7",
    "mypy-protobuf>=3.6.0",
]
