[project]
name = "grpc-calculator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "orjson>=3.10.7",
    "pandas>=2.2.3",
    "protobuf>=5.28.2",
    "grpcio>=1.68.0",
    "grpcio-tools>=1.68.0",
    "mypy-protobuf>=3.6.0",
    "httpx>=0.27.2",
    "pyarrow>=18.0.0",
    "watchdog[watchmedo]>=6.0.0",
]
[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true


[tool.pytest.ini_options]
minversion = "6.0"


[tool.ruff]
line-length = 140
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = [
    'A',     # flake8-builtins
    'ASYNC', # flake8-async
    'B',     # flake8-bugbear
    'C90',   # mccabe
    'EXE',   # flake8-executable
    'F',     # Pyflakes
    'FA',    # flake8-annotations
    'FLY',   # flynt
    'G',     # flake8-logging-format
    'I',     # isort
    'INP',   # flake8-no-pep420
    'INT',   # flake8-gettext
    'LOG',   # flake8-logging
    'PERF',  # Perflint
    'PIE',   # flake8-pie
    'PTH',   # flake8-use-pathlib
    'RSE',   # flake8-raise
    'RUF',   # Ruff-specific rules
    'S',     # flake8-bandit (security)
    'SIM',   # flake8-simplify
    'T20',   # flake8-print
    'TCH',   # flake8-type-checking
    'TID',   # flake8-tidy-imports
    'TRY',   # tryceratops
    'W',     # pycodestyle warnings
    'YTT',   # flake8-2020
]

ignore = [
    'S104',   # not a issue in docker
    'TRY003', # i do not like this ... it makes validation harder
    'TRY300', # rarely used in python and is not know by people
    'TRY301', #fastapi recommended way to raise exception
    'COM812', #conflict with formatter
    'ISC001', #conflict with formatter
    'F541',
    'S311',
    'A002'
]

exclude = [
    ".git",
    ".mypy_cache",
    ".pyenv",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "venv",
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.params.Depends", "fastapi.Form", "fastapi.File"]


[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.mypy]
ignore_missing_imports= true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
